--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Wellcome to Potionfy</title>
 </head>
 <body>
-    
+    <h1>Wellcome to the Potionfy: Enjoy you stay</h1>
 </body>
 </html>
